Sun Jul 26 18:10:38 1992  Inge Wallin  (inge@lysator)

	* cache.el: cleaned up handling of the who info buffer slightly.
	  This should become very nice once the cookie code is used
	  instead.

	* async.el: Deleted some unnecessary junk.

	* prefetch.el New functions: lyskom-reset-prefetch,
	  lyskom-setup-prefetch, lyskom-prefetch-membership,
	  lyskom-prefetch-all-conf-stats, lyskom-prefetch-marks,
	  lyskom-prefetch-who-is-on.  Not all of these functions are
	  working as intended but at least they should do their job.

Sun Jul 19 12:07:22 1992  Linus Tolke Y  (linus@lysator)

	* commands1.el (lyskom-return-who-info-line): Fixed a bug that
	  resulted in too much truncation.

Sun Jul  5 05:02:37 1992  Linus Tolke Y  (linus@lysator)

	* completing-read.el (lyskom-completing-read-conf-stat-handler):
	  Fixed a bug when using 'empty, it returned nil instead of 0.

	* commands2.el (kom-set-permitted-submitters): Added a possibility
	  to set permitted submitters.
	  Changes to: kom-set-super-conf, 
	  lyskom-set-conf-for-conf* (was: lyskom-set-super-conf*...).

	* commands1.el (lyskom-return-who-info-line): Now removes all
	  ending spaces.

	* commands1.el (lyskom-write-comment, lyskom-comment-recipients):
	  Now writing footnotes keep the cc-recipients.

	* review.el (lyskom-review-by-to): Fixed the bug that made the
	  function sometimes miss articles. 
	  Optimized so that searching from the end, stopped when found the
	  first article in a conf or that a person wrote.

Tue Jun 30 00:25:13 1992  Linus Tolke Y  (linus@robin)

	* swedish-strings.el (lyskom-mode-map): kom-review-noconversion
	  put on }o.

Wed Jun 17 21:33:24 1992  Linus Tolke Y  (linus at lysator)

	* vars.el (lyskom-global-boolean-variables): added 
	  kom-confirm-multiple-recipients.

Tue Jun 16 13:31:00 1992  Linus Tolke Y  (linus@robin)

	* Distribuerat version 0.34.6		13.31

Tue Jun 16 00:34:42 1992  Linus Tolke Y  (linus@robin)
